<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">MNVmod</string>
    <string name="menu_new">New</string>
    <string name="menu_close">Close</string>
    <string name="menu_save">Save</string>
    <string name="menu_save_as">Save As…</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_new_folder">New Folder</string>
    <string name="proc_open">File Opening…</string>
    <string name="proc_save">File Saving…</string>
    <string name="pass_input_text">Input Password</string>
    <string name="encrypt_check">Encrypt?</string>
    <string name="password_not_match">Passwords do not match.Try again.</string>
    <string name="password_empty">Password is empty.</string>


    <string name="longclick_menu_title">Action</string>
    <string name="longclick_menu_open">Open</string>
    <string name="longclick_menu_delete">Delete</string>
    <string name="longclick_menu_cancel">Cancel</string>
    <string name="longclick_menu_rename">Rename to…</string>
    <string name="longclick_menu_copy">Copy to…</string>
    <string name="longclick_menu_move">Move to…</string>
    <string name="longclick_menu_delete_confirm">Do you really want to delete the file?</string>


    <string name="folder_name_input">Input Folder Name.</string>
    <string name="file_name_input">Input File Name.</string>
    <string name="input_name_empty">Name is empty.</string>
    <string name="done_rename_file">File renamed.</string>
    <string name="done_move_file">File moved.</string>

    <string name="error_file_cannot_copy">Can not copy.</string>
    <string name="error_file_cannot_read">Can not read the file</string>
    <string name="error_file_already_exists">File/Folder already exists</string>
    <string name="error_operation_failed">Operation Failed.</string>

    <string name="alert_overwrite">Overwrite this file?</string>
    <string name="alert_close_modified_file">The note has been modified. Save changes?</string>

    <string name="alert_text_trancated">Text was truncated (it was too large).</string><!-- if truncated after reading file-->
    <string name="notify_file_save">save</string><!--toast when file saved. "save: file.txt"  -->
    <!-- syntax error in search box-->
    <string name="alert_general_error">Error</string><!-- General error."Error \nblablablabla" e.g. save to "/" cause FileNotFoundException-->
    <string name="alert_cannot_openfile">Can not open file</string><!-- Can not open file: file.unknown_type-->
    <string name="alert_initdir_is_not_exist">does not exist.</string><!-- Initial directory is not exist at launching app.-->
    <string name="notify_now_in_progress">Now in progress…</string>


    <string name="BottomMenu_updir">go up</string>
    <string name="BottomMenu_menu">menu</string>
    <string name="BottomMenu_close">close</string>

    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_no">No</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_left">Left</string>
    <string name="alert_dialog_right">Right</string>
    <string name="alert_dialog_up">Up</string>
    <string name="alert_dialog_down">Down</string>
    <string name="alert_dialog_newfolder">NewFolder</string>
    <string name="alert_dialog_newfile">NewFile</string>


    <!-- for Settings activity -->


    <!--  Preferences -->
    <string name="category_common">Common</string>
    <string name="category_dir">File Browser View</string>
    <string name="category_edit">Note View</string>

    <string name="prefPWResetTimerKey" translatable="false">PWResetTimer</string>
    <string name="prefPWResetTimer">Password Timer(min)</string>
    <!-- <string name="prefPWResetTimerSummary">Expired time of input password</string> -->
    <string name="prefPWResetTimerSummary">minutes</string>

    <string name="prefCharsetNameKey" translatable="false">prefCharsetName</string>
    <string name="prefCharsetName">Character Sets</string>
    <string name="prefCharsetNameSummary">Character Set</string>

    <string name="prefShowButtonsKey" translatable="false">showButtons</string>
    <string name="prefShowButtons">Show Buttons on Bottom</string>
    <string name="prefShowButtonsSummary">Show Buttons(up dir/menu,close/menu)</string>
    <string name="prefShowButtonsSummaryOn">Show Buttons(up dir/menu,close/menu)</string>
    <string name="prefShowButtonsSummaryOff">Hide Buttons(up dir/menu, close/menu)</string>

    <string name="prefFontSizeKey" translatable="false">fontSize</string>
    <string name="prefFontSize">Text Size</string>
    <string name="prefFontSizeSummary">Text Size</string>
    <string name="prefFontSizeSampleText">Size(sp)</string>

    <string name="prefLineBreakCodeKey" translatable="false">prefLineBreakCode</string>
    <string name="prefLineBreakCode">Line Break Character</string>
    <string name="prefLineBreakCodeSummary">Line Break Character</string>

    <string name="prefAutoSaveKey" translatable="false">prefAutoSave</string>
    <string name="prefAutoSave">Auto Save Mode</string>
    <string name="prefAutoSaveSummary">Automatically save file.(save at closing and at going to background.)</string>

    <string name="prefTypefaceKey" translatable="false">prefTypeface</string>
    <string name="prefTypeface">Font Style</string>
    <string name="prefTypefaceSummary">default/monospace/sans serif/serif</string>

    <string name="prefFileListOrderKey" translatable="false">prefFileListOrder</string>


    <string name="prefNoTitleBarKey" translatable="false">prefNoTitleBar</string>
    <string name="prefNoTitleBar">No title in note view</string>
    <string name="prefNoTitleBarSummary">Turning off the title in note view.</string>


    <string name="prefFontSizeOnListKey" translatable="false">fontSizeOnList</string>
    <string name="prefFontSizeOnList">Text Size</string>
    <string name="prefFontSizeOnListSummary">Text Size</string>
    <string name="prefFontSizeOnListSampleText">Size(sp)</string>


    <!-- for grep activity -->

    <!--  for template list activity -->

    <!-- Erro Message in MyUtil class -->
    <string name="util_error_invalid_filesize1">Invalid data</string><!-- chi file invalid.(less than 32 byte) -->
    <string name="util_error_invalid_filesize2">Invalid data size (not mutiples of 8)</string><!-- Invalid file size (not mutiples of 8) -->
    <string name="util_error_invalid_fileheader">This File is NOT Blowfish encrypted.</string><!-- Invalid file header (not start with BF01) -->
    <string name="util_error_passdigest_is_null">password input error.</string><!-- password Digest is null -->
    <string name="util_error_md5_check_sum_error">Password is not correct.</string><!-- check sum error with got password -->

    <string name="util_error_file_already_exists">Folder/File already exists.</string><!-- when create dir or rename file -->

</resources>

