<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/category_common">
        <CheckBoxPreference
            android:key="@string/prefShowButtonsKey"
            android:summary="@string/prefShowButtonsSummary"
            android:title="@string/prefShowButtons"
            />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_dir">
        <PreferenceScreen
            android:key="@string/prefFontSizeOnListKey"
            android:summary="@string/prefFontSizeOnListSummary"
            android:title="@string/prefFontSizeOnList"
            />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_edit">
        <CheckBoxPreference
            android:key="@string/prefNoTitleBarKey"
            android:summary="@string/prefNoTitleBarSummary"
            android:title="@string/prefNoTitleBar"
            />

        <PreferenceScreen
            android:key="@string/prefFontSizeKey"
            android:summary="@string/prefFontSizeSummary"
            android:title="@string/prefFontSize"
            />
        <ListPreference
            android:entries="@array/typeface_entries"
            android:entryValues="@array/typeface_entryvalues"
            android:key="@string/prefTypefaceKey"
            android:summary="@string/prefTypefaceSummary"
            android:title="@string/prefTypeface"
            />

    </PreferenceCategory>


</PreferenceScreen>